<resources>
    <string name="purchase">PURCHASE</string>
    <string name="withdrawal">WITHDRAWAL</string>
    <string name="transfer">TRANSFER</string>
    <string name="insert_card">PLEASE INSERT CARD</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">HOME</string>
    <string name="title_eod">EOD</string>
    <string name="title_settings">SETTINGS</string>
    <string name="app_name">PocketMoni Agent</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="create_new_account">Create New Account</string>
    <string name="blank"> </string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">@string/app_name</string>
    <string name="create_account">Create Account</string>
    <string name="unlock_endless_possibilities">Unlock endless possibilities</string>
    <string name="make_transaction_seamlessly">Make seamless transactions, swiftly</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="visit_any_agent_location">Visit any agent location</string>
    <string name="_24_hour_support">24/7 support</string>
    <string name="welcome_back">Welcome back,</string>
    <string name="login_to_continue">Login to your account to continue</string>
    <string name="phone_number">Phone number</string>
    <string name="_4_digit_pin">4-digit pin</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="phone_number_hint">090xxxxxxx</string>
    <string name="enter_pin">Enter pin</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="enter_email_caption_text">Enter the email associated with this account</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter email</string>
    <string name="reset_password">Reset Password</string>
    <string name="dont_have_an_account">Don’t have an account?</string>
    <string name="unlock_with_pocketmoni">Unlock endless possibilities with PocketMoni</string>
    <string name="first_name">First name</string>
    <string name="find_transaction">Find Transaction</string>
    <string name="last_name">Last name</string>
    <string name="bvn">BVN</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="Female">Female</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="date_format_hint">DD/MM/YYYY</string>
    <string name="confirm_pin">Confirm pin</string>
    <string name="input_required">Input required</string>
    <string name="valid_input_required">Valid input required</string>
    <string name="verify_phone_number">Verify phone number</string>
    <string name="verify_guide_placeholder">Input the code sent to %1$s</string>
    <string name="resend_code">Resend Code</string>
    <string name="home">Home</string>
    <string name="cash_out">Cash Out</string>
    <string name="account">Account</string>
    <string name="users">Users</string>
    <string name="pay_out">Pay Out</string>
    <string name="account_coming_soon">Account is coming soon</string>
    <string name="users_coming_soon">Users is coming soon</string>
    <string name="payout_coming_soon">Pay Out is coming soon</string>
    <string name="data_coming_soon">Data is coming soon</string>
    <string name="menu">Menu</string>
    <string name="alert">Alert</string>
    <string name="print_configuration">Print Configuration</string>
    <string name="cashout_with_ussd">Cash out with USSD</string>
    <string name="cashout_with_ussd_description">Complete your transaction using USSD short code</string>
    <string name="cashout_with_card">Cash out with Debit Card</string>
    <string name="cashout_with_card_description">Conduct your transaction using Debit card</string>
    <string name="payout_with_card_description">Conduct your transaction using card</string>
    <string name="cashout_without_card_description">Conduct your transaction using cash</string>
    <string name="hope_youre_safe">Hope you’re staying safe</string>
    <string name="choose_cashout_option">Choose your desired cash out option</string>
    <string name="choose_payout_option">Choose your desired pay out option</string>
    <string name="tier_1_declaration">You\'re currently on tier 1</string>
    <string name="tier_2_declaration">You\'re currently on tier 2</string>
    <string name="tier_3_declaration">You\'re currently on tier 3</string>
    <string name="wallet_class">Wallet Class</string>
    <string name="select_option">Select option</string>
    <string name="premium_class">Premium Class</string>
    <string name="recent_transaction">Recent Transactions</string>
    <string name="showing_last_5">Showing last 5 transactions</string>
    <string name="access_code">Access code</string>
    <string name="reference_code">Reference code</string>
    <string name="reference_number">Reference Number</string>
    <string name="rrn">RRN</string>
    <string name="amount">Amount</string>
    <string name="amount_special">Amount (NGN)</string>
    <string name="convenience_fee">Convenience fee:</string>
    <string name="pay">Pay</string>
    <string name="close">Close</string>
    <string name="retry">Retry</string>
    <string name="payment_failed">Payment Failed</string>
    <string name="payment_failed_placeholder">Your transaction failed</string>
    <string name="details">Details</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="account_number">Account Number</string>
    <string name="masked_pan">Masked PAN</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="date">Date</string>
    <string name="processor">Processor</string>
    <string name="print_receipt">Print Receipt</string>
    <string name="_0_00">0.00</string>
    <string name="view_account">View Account</string>
    <string name="name_place_holder">Ifeanyi Azubuike</string>
    <string name="transaction_history">Transaction History</string>
    <string name="notification">Notification</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="version">Version</string>
    <string name="logout">Logout</string>
    <string name="email_notification">Email notification</string>
    <string name="push_notification">Push notification</string>
    <string name="update">Update</string>
    <string name="convenience_fee_2">Convenience Fee</string>
    <string name="cash_back_amount">Cashback Amount</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="status">Status</string>
    <string name="eod">EOD</string>
    <string name="end_of_day">End of Day</string>
    <string name="approved_sales">Approved Volume</string>
    <string name="empty_transaction_notice">Do a transaction to view history</string>
    <string name="enter_terminal_id">Enter terminal ID</string>
    <string name="terminal_id">Terminal ID</string>
    <string name="host_ip">Host IP</string>
    <string name="host_port">Host Port</string>
    <string name="is_ssl">Is SSL</string>
    <string name="ssl_connection">SSL Connection</string>
    <string name="configure">Configure</string>
    <string name="primary_host">Primary Host</string>
    <string name="secondary_host">Secondary Host</string>
    <string name="epms_test_ip">196.6.103.72</string>
    <string name="epms_test_port">5043</string>
    <string name="posvas_test_ip">196.6.103.10</string>
    <string name="posvas_test_port">55533</string>
    <string name="terminal_configuration">Terminal Configuration</string>
    <string name="host_not_initialized_transaction_error_message">Host not initialized. Please do a transaction first.</string>
    <string name="no_transaction_found">No transaction found</string>
    <string name="printing_report">Printing report</string>
    <string name="call_home_time">Call home time:</string>
    <string name="available_balance">Available Balance</string>
    <string name="convenient_fee">Convenient fee</string>
    <string name="cash_out_with_debit_card">Cash out with debit card</string>
    <string name="pay_with_debit_card">Pay with debit card</string>
    <string name="card_no">Card No</string>
    <string name="terminal_date">Terminal Date</string>
    <string name="trans_time">Trans Time</string>
    <string name="card_holder">Card Holder</string>
    <string name="card_type">Card Type</string>
    <string name="transaction_approved">Transaction Approved</string>
    <string name="system_malfunction">System malfunction</string>
    <string name="payment_successful">Payment Successful</string>
    <string name="response_code">Response Code</string>
    <string name="your_transaction_was_successful">Your transaction was successful</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="you_are_currently_on_tier_1">You are currently on tier 1</string>
    <string name="ifeanyi">Ifeanyi</string>
    <string name="azubuike">Azubuike</string>
    <string name="ifeanyi_azubuike_etranzactng_com">Ifeanyi.azubuike@etranzactng.com</string>
    <string name="version_number">Version 0.0.1</string>
    <string name="processing_payment">Processing payment</string>
    <string name="setting_up_your_account">Setting up your account</string>
    <string name="did_nt_receive_a_code">Did\'nt receive a code?</string>
    <string name="configuring_your_device_please_wait">Configuring your device, please wait</string>
    <string name="search_by_date">Search by date</string>
    <string name="application_is_upgrading_please_wait">APPLICATION IS UPGRADING PLEASE WAIT</string>
    <string name="etranzact_international">eTranzact International</string>
    <string name="pocketmoni_pos">PocketMoni POS</string>
    <string name="acct_default">Default</string>
    <string name="acct_credit">Credit</string>
    <string name="acct_current">Current</string>
    <string name="acct_savings">Savings</string>
    <string name="des">DES</string>
    <string name="desEde">DESede</string>
    <string name="desEdeInstance">DESede/ECB/NoPadding</string>
    <string name="rsa">RSA</string>
    <string name="rsaInstance">RSA/ECB/NoPadding</string>
    <string name="f_and_zero">FFFFFFFFFFFFFFFF0000000000000000</string>
    <string name="zero_and_f">0000000000000000FFFFFFFFFFFFFFFF</string>
    <string name="zero_f_zero_f">00000000000000FF00000000000000FF</string>
    <string name="c_zero_c_zero_c_zero">C0C0C0C000000000C0C0C0C000000000</string>
    <string name="card_transfer">Card Transfer</string>
    <string name="cash_transfer">Cash Transfer</string>
    <string name="pay_bills">Bills Payments</string>
    <string name="change">CHANGE</string>
    <string name="chose_your_desired_payment">Chose your desired payment option</string>
    <string name="narration">Narration</string>
    <string name="customer_phone">Customer Phone</string>
    <string name="customer_phone_optional">Customer Phone (Optional)</string>
</resources>