<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.LoginActivity.SignInActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15"/>

    <TextView
        android:id="@+id/welcomeTitleText"
        style="@style/pocketmoni_title_text_style.login_title"
        android:text="@string/welcome_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <TextView
        android:id="@+id/welcomeCaptionText"
        android:text="@string/login_to_continue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTitleText"
        style="@style/pocketmoni_title_caption_style" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/phone_number"
        android:textColor="#4F4F4F"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeCaptionText" />

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:inputType="phone"
        android:id="@+id/phoneInputLayout"
        android:background="@drawable/custom_border_edittext"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:hint="@string/phone_number_hint"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_marginStart="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/_4_digit_pin"
        android:textColor="#4F4F4F"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneInputLayout" />


    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:id="@+id/pinTextInputLayout"
        android:inputType="numberPassword"
        android:textSize="15sp"
        android:hint="@string/enter_pin"
        android:background="@drawable/custom_border_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"/>


    <Button
        android:id="@+id/sign_in"
        android:background="@drawable/custom_border_button"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:text="@string/sign_in"
        android:gravity="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password" />

    <TextView
        android:id="@+id/forgot_password"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:textColor="@color/pocketmoni_text_color"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/forgot_password"
        app:layout_constraintEnd_toEndOf="@+id/pinTextInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/pinTextInputLayout" />

    <LinearLayout
        android:id="@+id/createAcctLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in"
        style="@style/alternate_action_layout_style">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_an_account"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/create_acct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/create_account"
            android:textColor="@color/pocketmoni_deep_blue"
            android:textSize="16sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>