<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_marginLeft="50dp"
    android:layout_marginRight="50dp"
    android:padding="5dp"
    android:orientation="vertical"
    android:id="@+id/btn_layout"
    android:layout_height="wrap_content">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_border_edittext"
        android:onClick="onAccountBtnClick"
        android:tag="10"
        android:textSize="20dp"
        android:text="@string/acct_savings"/>

    <Button
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_border_edittext"
        android:onClick="onAccountBtnClick"
        android:tag="20"
        android:textSize="20dp"
        android:text="@string/acct_current"/>

    <Button
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_border_edittext"
        android:onClick="onAccountBtnClick"
        android:tag="30"
        android:textSize="20dp"
        android:text="@string/acct_credit"/>

    <Button
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_border_edittext"
        android:onClick="onAccountBtnClick"
        android:tag="00"
        android:textSize="20dp"
        android:text="@string/acct_default"/>

</LinearLayout>