<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.LoginActivity.ForgotPasswordActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15"/>

    <TextView
        android:id="@+id/welcomeTitleText"
        style="@style/pocketmoni_title_text_style.login_title"
        android:text="@string/forgot_password_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <TextView
        android:id="@+id/welcomeCaptionText"
        android:text="@string/enter_email_caption_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTitleText"
        style="@style/pocketmoni_title_caption_style" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeCaptionText" />

    <EditText
        style="@style/pocketmoni_default_text_input_layout_style"
        android:id="@+id/email_box"
        android:background="@drawable/custom_border_edittext"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:hint="@string/enter_email"/>

    <Button
        android:id="@+id/password_btn"
        style="@style/pocketmoni_default_button_style"
        android:layout_width="0dp"
        android:background="@drawable/custom_border_button"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:text="@string/reset_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_box" />

</androidx.constraintlayout.widget.ConstraintLayout>